--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
                     <p>A showcase of my recent work and achievements</p>
                 </div>
                 
-                <div class="projects-grid">
+                <div class="projects-container">
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="project1.jpg" alt="E-commerce Platform" loading="lazy">
+                            <img src="luxora banner.jpg" alt="E-commerce Platform" loading="lazy">
                             <div class="project-overlay">
                                 <div class="project-links">
-                                    <a href="#" class="project-link" aria-label="View Live Demo">
+                                    <a href="https://divinefavour13.github.io/Ecommerce/" class="project-link" aria-label="View Live Demo">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
-                                    <a href="#" class="project-link" aria-label="View Source Code">
+                                    <a href="https://github.com/DivineFavour13/Ecommerce" class="project-link" aria-label="View Source Code">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </div>
